# poolvision-core-v2

./: .gitignore  AI_IMPLEMENTATION_DECISIONS.md  CMakeLists.txt  DEVELOPMENT_TASKS.md  IMPLEMENTATION_AUDIT.md  LICENSE  PHASE3_SUMMARY.md  PHASE_10_2_COMPLETION.md  PHASE_10_2_PLAN.md  README.md  ROADMAP.md  USER_CONFIG_SYSTEM.md  YOEY_DECISIONS.md  build_log.txt  install.bat  install.sh  vcpkg.json
apps/calibrate/: main.cpp
apps/pool_vision/: main.cpp
apps/setup_wizard/: main.cpp
apps/table_daemon/: main.cpp
config/: camera.yaml  colors.yaml  table.yaml
core/ai/: CoachingEngine.cpp  CoachingEngine.hpp  CoachingPrompts.cpp  CoachingPrompts.hpp  OllamaClient.cpp  OllamaClient.hpp
core/ai/learning/: AILearningSystem.cpp  AILearningSystem.hpp  AdaptiveCoachingEngine.cpp  AdaptiveCoachingEngine.hpp  DataCollectionEngine.cpp  DataCollectionEngine.hpp  PerformanceAnalyticsEngine.cpp  PerformanceAnalyticsEngine.hpp  ShotAnalysisEngine.cpp  ShotAnalysisEngine.hpp  SimpleAILearningSystem.cpp  SimpleAILearningSystem.hpp  SimpleDataCollectionEngine.cpp  SimpleDataCollectionEngine.hpp
core/calib/: Calib.cpp  Calib.hpp  Homography.cpp  Homography.hpp
core/db/: Database.cpp  Database.hpp  PlayerProfile.hpp
core/detect/classical/: BallDetector.cpp  BallDetector.hpp  StripeClassifier.cpp  StripeClassifier.hpp
core/detect/dl/: DlDetector.cpp  DlDetector.hpp
core/detect/modern/: CudaPreprocessKernels.cpp  CudaPreprocessKernels.cu  CudaPreprocessKernels.hpp  GpuNonMaxSuppression.cpp  GpuNonMaxSuppression.cu  GpuNonMaxSuppression.hpp  TensorRtBallDetector.cpp  TensorRtBallDetector.hpp
core/events/: EventEngine.cpp  EventEngine.hpp
core/game/: DrillLibrary.cpp  DrillLibrary.hpp  DrillSystem.cpp  DrillSystem.hpp  GameRecorder.cpp  GameRecorder.hpp  GameState.cpp  GameState.hpp  MatchSystem.cpp  MatchSystem.hpp  ModernGameLogicAdapter.hpp  SessionPlayback.cpp  SessionPlayback.hpp  ShotLibrary.cpp  ShotLibrary.hpp  TrainingMode.cpp  TrainingMode.hpp
core/game/modern/: ShotSegmentation.cpp  ShotSegmentation.hpp
core/integration/: ModernPipelineIntegrator.cpp  ModernPipelineIntegrator.hpp
core/io/: JsonSink.cpp  JsonSink.hpp  VideoSource.cpp  VideoSource.hpp
core/io/gpu/: HighPerformanceVideoSource.cpp  HighPerformanceVideoSource.hpp
core/performance/: ProcessingIsolation.cpp  ProcessingIsolation.hpp
core/streaming/: OBSInterface.cpp  OBSInterface.hpp  OverlayManager.cpp  OverlayManager.hpp  PlatformAPIs.cpp  PlatformAPIs.hpp  StreamingEngine.cpp  StreamingEngine.hpp  StreamingTypes.hpp  TemplateSystem.cpp  TemplateSystem.hpp
core/track/: Physics.cpp  Physics.hpp  Tracker.cpp  Tracker.hpp
core/track/modern/: ByteTrackMOT.cpp  ByteTrackMOT.hpp
core/ui/: MatchUI.cpp  MatchUI.hpp  OverlayRenderer.cpp  OverlayRenderer.hpp  ResponsiveLayout.cpp  ResponsiveLayout.hpp  UITheme.cpp  UITheme.hpp  WizardManager.cpp  WizardManager.hpp  WizardPage.cpp  WizardPage.hpp
core/ui/menu/: AnalyticsPage.cpp  AnalyticsPage.hpp  DrillsPage.cpp  DrillsPage.hpp  MainMenuPage.cpp  MainMenuPage.hpp  PlayerProfilesPage.cpp  PlayerProfilesPage.hpp  SettingsPage.cpp  SettingsPage.hpp
core/ui/modern/: SeparatedUIRenderer.cpp  SeparatedUIRenderer.hpp
core/ui/wizard/: CalibrationCompletePage.cpp  CalibrationCompletePage.hpp  CameraOrientationPage.cpp  CameraOrientationPage.hpp  CameraSelectionPage.cpp  CameraSelectionPage.hpp  TableCalibrationPage.cpp  TableCalibrationPage.hpp  TableDimensionsPage.cpp  TableDimensionsPage.hpp
core/util/: ColorLab.cpp  ColorLab.hpp  Config.cpp  Config.hpp  Timing.cpp  Timing.hpp  Types.hpp  UiRenderer.cpp  UiRenderer.hpp  UserConfig.cpp  UserConfig.hpp
core/video/: SessionVideoManager.cpp  SessionVideoManager.hpp
data/: poolvision.db
docs/: Complete_Build_Report.md  Phase10.1_AI_Learning_System.md  Phase_10.1_AI_Learning_Release_Summary.md
examples/: ai_learning_demo.cpp
plugins/obs/: CMakeLists.txt  README.md
scripts/: setup_ubuntu.sh  setup_windows.ps1
tests/integration/: DetectionTrackingTest.cpp
tests/unit/: BallDetectorTest.cpp  ConfigTest.cpp  GameStateTest.cpp  PhysicsTest.cpp
